# arxiv_pipeline

./: .env  .gitignore  .windsurfrules  .windsurfrules_updated.md  Dockerfile  Dockerfile.jupyter  EmojiMe.md  README.md  docker-compose.monitoring.yml  docker-compose.web-ui.yml  docker-compose.yml  kaggle.json.example  package-lock.json  playground-2.mongodb.js  pyproject.toml  system_metadata.yaml  test_docker_mount.py
cli/: main.py
cli/commands/: agent.py  config.py  logs.py
config/: agent_config.yaml  deafault_daily.yaml  default.yaml  settings.py
config/grafana/dashboards/: arxiv_advanced_analytics_dashboard.json  arxiv_data_science_dashboard.json  arxiv_vector_embedding_dashboard.json  docker_containers.json  mock_dashboard.json  system_metrics.json
config/prometheus/: prometheus.yml
deploy_external/: README.md
deploy_external/mongodb_setup/: Dockerfile  README.md  docker-compose.yml
deploy_external/neo4j_setup/: Dockerfile  README.md  docker-compose.yml
deploy_external/ollama_setup/: Dockerfile  README.md  docker-compose.yml  ollama_docker.md
deploy_external/qdrant_setup/: Dockerfile  README.md  docker-compose.yml
deployment/: Dockerfile.agent-base  docker-compose.-agents.yml  requirements.txt
dev_utils/: README.md  metadata_generator.py  system_metadata.yaml
docs/: 00-dev_env.md  02-business_requirements.md  09-project_plan.md  10-communication_plan.md  11-risk_management_plan.md  12-release_notes.md  13-scratch.md  2-product_requirements.md  3-requirements_tracker.md  4-system_design.md  EmojiMe.md  README.md  ai_agent_achitectue.md  brd.md  business_requirements.md  container_id_reference.md  dev_notes.md  feedback_analysis-01.md  feedback_analysis-02.md  feedback_analysis.md  grafana_dashboard_guide.md  prd.md  product_requirements.md  prometheus_basic_queries.md  prometheus_custom_queries.md  prometheus_id_format.md  prometheus_queries.md  prometheus_working_queries.md  release_notes.md  requirements_tracker.md  scratch.md  system_design.md  tech_stack.md  tracker.md  user_data_review.md
docs/product_eval/: Kubernetes.md  ai_studio_enhancements.md  ai_studio_enhancements2.md  arvix_kubernetes.md  messaging_system.md  stat_analysis.md  user_data_review.md
model_metadata_viewer/: README.md  huggingface_model_viewer.html  model_metadata_view_archiveX.html  model_metadata_viewer.html  ollama_available_models.json  ollama_models_data.json  open_models_data.json
notebooks/: 01_database_connectivity.ipynb  02_mongodb_analysis.ipynb  03_neo4j_analysis.ipynb  04_qdrant_graph_analysis.ipynb  README.md  deep_research_analysis.ipynb
notebooks/.ipynb_checkpoints/: 01_database_connectivity-checkpoint.ipynb  02_mongodb_analysis-checkpoint.ipynb  02_mongodb_analysis_simple-checkpoint.ipynb  04_qdrant_analysis-checkpoint.ipynb
playground_query/: playground-1.mongodb-archive.js
qdrant_setup/: README.md
scripts/: check_prometheus_metrics.py  setup_uv.ps1  setup_uv.sh
src/agents/: base_agent.py  manager.py
src/agents/code_doc/: agent.py  git_monitor.py
src/agents/research/: agent.py
src/agents/research/templates/: concept_mapping.txt  summarize.txt
src/agents_core/: README.md  config.py  logging_utils.py
src/agents_core/models/: claude.py  huggingface.py  ollama.py
src/api/: main.py  requirements.txt
src/api/models/: mongodb.py  neo4j.py  qdrant.py
src/api/routes/: mongodb.py  neo4j.py  qdrant.py
src/arxiv_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graph/: neo4j_sync.py  sync_mongo_to_neo4j.py  test_neo4j.py
src/ingestion/: fetch.py
src/llm_eval/: README.md  evaluate_llm_models.py
src/llm_eval/evaluation/: evaluate.py  metrics.py
src/llm_eval/results/: comparison_results3.txt  evaluation_results.json  model1_results.json  model2_results.json
src/llm_eval/test_data/: test_data.json
src/model_metadata_viewer/: README.md  model_metadata_viewer.html
src/pipeline/: download_kaggle_arxiv.py  insert_bertopic_mongodb.py  insert_top2vec_mongodb.py  kaggle_sample_code.py  process_pdf.py  run_pipeline.py  sync_mongodb.py  sync_qdrant.py  sync_summary_vectors.py  top2vec.py
src/pubmed/: config.py  db_client.py  main.py  pubmed_base_readme.md  pubmed_client.py
src/storage/: mongo.py
src/utils/: analyze_papers_by_year_month_day.py  check_mongodb.py  check_pdf_urls.py  check_topics.py  clear_neo4j.py  count_papers_by_date.py  download_pdfs.py  inspect_paper_schema.py  load_huggingface_metadata.py  load_ollama_all_metadata.py  load_ollama_metadata.py  logger.py  query_top2vec_topics.py  track_downloaded_pdfs.py  validate_mongodb_data.py
src/web-ui/: .dockerignore  Dockerfile  package-lock.json  package.json
src/web-ui/public/: index.html  manifest.json
src/web-ui/src/: App.css  App.js  config.js  index.css  index.js
src/web-ui/src/components/: ConfigEditor.js  GraphVisualization.js  Home.js  JupyterReports.js  JupyterViewer.js  MongoDBReports.js  NavBar.js  Neo4jExplorer.js  PipelineManagement.js  QdrantSearch.js  ThemeToggle.js
src/web-ui/src/config/: api-config.js  neo4j-queries.yaml  queries.js
src/web-ui/src/context/: ThemeContext.js
src/web-ui/src/hooks/: useTheme.js
src/web-ui/src/services/: DatabaseMetricsService.js  JupyterService.js  Neo4jService.js
src/web-ui/src/styles/: Dashboard.css  Home.css  JupyterReports.css  JupyterViewer.css  NavBar.css  Neo4jExplorer.css  PlaceholderPage.css  ThemeToggle.css
src/web-ui/src/utils/: graphTransformer.js
