[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv_pipeline"
version = "0.1.0"
description = "Local pipeline for processing ArXiv papers with graph and vector representation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
    "pymongo>=4.3.0",
    "neo4j>=5.5.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.1.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.30",
    "tqdm>=4.64.0",
    "pillow>=10.0.0",
    "pymupdf>=1.23.0",
    "motor>=3.3.0",
    "transformers",
    "torch>=2.0.0",                 # Base PyTorch package
    "ollama",                        # For local LLM support with Ollama
    "pypdf",                         # Required for PDF loading with LangChain
    # "openai>=1.0.0",               # <-- Commented out, not needed for local-only
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]