[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv_pipeline"
version = "0.1.0"
description = "Local pipeline for processing ArXiv papers with graph and vector representation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
# NLTK data dependencies will be downloaded on first use
# Run: python -c "import nltk; nltk.download('wordnet'); nltk.download('omw-1.4')

dependencies = [
    "nltk>=3.8.0",  # For NLP text processing and wordnet
    "requests>=2.28.0",
    "pymongo>=4.3.0",
    "neo4j>=5.5.0",
    "pyyaml>=6.0.1",  # Ensure YAML 1.2+ for better compatibility
    "kaggle>=1.5.12",  # Official Kaggle API client
    "kagglehub>=0.1.0",  # Kaggle model and dataset hub
    "qdrant-client>=1.1.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.30",
    "tqdm>=4.64.0",
    "pillow>=10.0.0",
    "pymupdf>=1.23.0",
    "motor>=3.3.0",
    "transformers",
    "torch>=2.0.0",                 # Base PyTorch package
    "ollama",                        # For local LLM support with Ollama
    "numpy>=1.24.0",               # For data manipulation in notebooks
    "scipy<1.11.0,>=1.9.0",        # Compatible version for Top2Vec
    "bertopic>=0.15.0",             # For topic modeling
    "top2vec>=1.0.0",              # For Top2Vec topic modeling
    # nltk moved to top of dependencies list
    "pypdf",                         # Required for PDF loading with LangChain
    "jupyter>=1.0.0",               # Jupyter Notebook support
    "jupyterlab>=4.0.0",            # JupyterLab interface
    "pandas>=2.0.0",                # For data manipulation in notebooks
    "matplotlib>=3.7.0",            # For visualization in notebooks
    "seaborn>=0.12.0",              # For enhanced visualization (needed by Top2Vec)
    "tabulate>=0.9.0",              # For pretty-printing tables in query scripts
    "ipywidgets>=8.0.0",            # Interactive widgets for notebooks
    "python-dotenv>=1.0.0",         # Environment variable support
    "fastapi>=0.100.0",             # API Framework for backend
    "uvicorn>=0.23.0",              # ASGI server for FastAPI
    # "openai>=1.0.0",               # <-- Commented out, not needed for local-only
    "datasets>=2.10.0",              # For loading and processing datasets
    "rouge-score>=0.1.2",            # For ROUGE evaluation metrics
    "pycocoevalcap>=1.2.0",          # For COCO evaluation metrics
    "pycocotools>=2.0.0",            # Required for COCO evaluation
    # nltk dependency already included above
    "sentencepiece>=0.1.99",         # Required for some tokenizers
    "protobuf>=3.20.0",              # Required by some dependencies
    "xxhash>=3.0.0",                 # Used for dataset caching
    "dill>=0.3.0",                   # For serialization of Python objects
    "multiprocess>=0.70.0",          # Better multiprocessing support
    "absl-py>=0.1.0",                # Used by some ML libraries
    "fsspec>=2023.1.0",              # Filesystem abstraction layer
    "pyarrow>=10.0.0",               # Required for dataset processing
    "transformers[torch]>=4.30.0",    # For model loading and inference
    "torch>=2.0.0",                   # PyTorch backend
    "evaluate>=0.4.0",                # For standardized evaluation metrics
    "sacrebleu>=2.0.0",               # For BLEU score calculation
    "sentence-transformers>=2.2.0"    # For semantic similarity metrics
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]